--- a/shell/sass/common/_colors.scss
+++ b/shell/sass/common/_colors.scss
@@ -15,7 +15,7 @@
 // Foreground colors
 //
 
-$fg_color: if($nokto == false, #263238, #CFD8DC);
+$fg_color: if($nokto == false, #0F0F0F, #CFD8DC);
 $secondary_fg_color: shellopacity($fg_color, 0.87);
 $tertiary_fg_color: shellopacity($fg_color, 0.54);
 $insensitive_fg_color: shellopacity($fg_color, 0.28);
@@ -43,14 +43,14 @@ $insensitive_osd_secondary_fg_color:
 //
 
 $bg_color: if($nokto == false, mix(#FFFFFF, #ECEFF1, 75%),
-                               #263238);
+                               #000000);
 $base_color: if($nokto == false, #FFFFFF,
-                                 mix(#263238, #37474F, 85%));
-$secondary_base_color: mix($base_color, $bg_color, 50%);
+                                 mix(#cccccc, #000000, 5%));
+$secondary_base_color: mix($base_color, $bg_color, 5%);
 $secondary_dark_color: if($nokto == false, mix(#FFFFFF, #ECEFF1, 60%),
-                                           mix(#263238, #000000, 95%));
+                                           mix(#111111, #000000, 5%));
 $light_color: if($nokto == false, $base_color,
-                                  mix(#263238, #37474F, 50%));
+                                  mix(#111111, #000000, 50%));
 
 $fill_color: shellopacity($fg_color, 0.25);
 $semi_fill_color: shellopacity($fg_color, 0.12);
@@ -68,7 +68,7 @@ $insensitive_outline_fill_color: shellopacity($outline_fill_color, 0.28);
 // OSD Background colors
 //
 
-$osd_bg_color: mix(#263238, #000000, 90%);
+$osd_bg_color: mix(#111111, #000000, 10%);
 
 $osd_fill_color: shellopacity($osd_fg_color, 0.25);
 $osd_semi_fill_color: shellopacity($osd_fg_color, 0.12);
@@ -106,8 +106,8 @@ $inverted_secondary_accent_label_color:
 //
 
 $borders_color: if($nokto == false, shellopacity(#000000, 0.09),
-                                    shellopacity(#000000, 0.13));
-$solid_light_borders_color: if($nokto == false, #E5E9EC, #212B30);
+                                    shellopacity(#222222, 0.13));
+$solid_light_borders_color: if($nokto == false, #E5E9EC, #222222);
 $borders_edge: shellopacity(#000000, 0.05);
 $top_hilight: $borders_edge;
 $borders_highlight: shellopacity(#FFFFFF, 0.07);
@@ -137,9 +137,8 @@ $destructive_color: $key_destruction_color;
 // Panel colors
 //
 
-$panel_bg_color: mix(#263238, #000000, 50%);
+$panel_bg_color: #000000;
 $panel_transparent_color: shellopacity($panel_bg_color, 0.0);
 $panel_hidden_fill_color: shellopacity($panel_bg_color, 0.01);
 $panel_secondary_fill_color: shellopacity($panel_bg_color, 0.87);
 $panel_tertiary_fill_color: shellopacity($panel_bg_color, 0.54);
-
